Fixed sidebar collapsing button

--- a/src/shared/assets/icon-font/style.module.scss
+++ b/src/shared/assets/icon-font/style.module.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'office';
-  src:  url('fonts/office.eot?3fg9ye');
-  src:  url('fonts/office.eot?3fg9ye#iefix') format('embedded-opentype'),
-    url('fonts/office.ttf?3fg9ye') format('truetype'),
-    url('fonts/office.woff?3fg9ye') format('woff'),
-    url('fonts/office.svg?3fg9ye#office') format('svg');
+  src:  url('fonts/office.eot?rz9els');
+  src:  url('fonts/office.eot?rz9els#iefix') format('embedded-opentype'),
+    url('fonts/office.ttf?rz9els') format('truetype'),
+    url('fonts/office.woff?rz9els') format('woff'),
+    url('fonts/office.svg?rz9els#office') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,69 +25,75 @@ i {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-contact:before {
+.icon-chevron-right:before {
+  content: "\e917";
+}
+.icon-chevron-left:before {
   content: "\e900";
 }
-.icon-feather:before {
+.icon-contact:before {
   content: "\e901";
 }
-.icon-eye-slashed:before {
+.icon-feather:before {
   content: "\e902";
 }
-.icon-eye-open:before {
+.icon-eye-slashed:before {
   content: "\e903";
 }
-.icon-arrows-up-down:before {
+.icon-eye-open:before {
   content: "\e904";
 }
-.icon-arrows-v:before {
+.icon-arrows-up-down:before {
   content: "\e905";
 }
-.icon-clients:before {
+.icon-arrows-v:before {
   content: "\e906";
 }
-.icon-documents:before {
+.icon-clients:before {
   content: "\e907";
 }
-.icon-integrations:before {
+.icon-documents:before {
   content: "\e908";
 }
-.icon-inventory:before {
+.icon-integrations:before {
   content: "\e909";
 }
-.icon-loyality:before {
+.icon-inventory:before {
   content: "\e90a";
 }
-.icon-marking:before {
+.icon-loyality:before {
   content: "\e90b";
 }
-.icon-news:before {
+.icon-marking:before {
   content: "\e90c";
 }
-.icon-package-box:before {
+.icon-news:before {
   content: "\e90d";
 }
-.icon-products:before {
+.icon-package-box:before {
   content: "\e90e";
 }
-.icon-profile:before {
+.icon-products:before {
   content: "\e90f";
 }
-.icon-question:before {
+.icon-profile:before {
   content: "\e910";
 }
-.icon-reports:before {
+.icon-question:before {
   content: "\e911";
 }
-.icon-scopes:before {
+.icon-reports:before {
   content: "\e912";
 }
-.icon-shops:before {
+.icon-scopes:before {
   content: "\e913";
 }
-.icon-stocks:before {
+.icon-shops:before {
   content: "\e914";
 }
-.icon-support:before {
+.icon-stocks:before {
   content: "\e915";
+}
+.icon-support:before {
+  content: "\e916";
 }
